--- a/ProjectWebbanhang - Thuchanh/resources/css/style.css
+++ b/ProjectWebbanhang - Thuchanh/resources/css/style.css
@@ -1,1 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+html{
+    font-family: 'Lato',sans-serif;
+    font-size: 18px;
+    color: black;
+    background-color: white;
+    text-rendering: optimizeLegibility;
+}
