--- a/ProjectEngslish - Learn/resources/css/style.css
+++ b/ProjectEngslish - Learn/resources/css/style.css
@@ -33,14 +33,25 @@ html{
 
 .linkheader li{
     display: inline-block;
+    margin-right: 30px;
+    margin-top: 50px;
 }
 
 .linkheader li a{
     text-decoration: none;
+    color: white;
+    font-size: 110%; /*Chỉnh thế này để sau này dễ chỉnh reponsive*/
+    font-weight: 700;
+    transition: border-bottom 2s;
+}
+
+.linkheader li a:hover, .linkheader li a:active{
+    border-bottom: 4px solid white;
 }
 
 header{
-    background-image: url("../img/background4.jpeg");
+    background-image: linear-gradient(45deg,rgba(2,33,64, 0.8) 55%,rgba(45,95,93,0.8)), url("../img/background4.jpeg"); 
+    /*Nguyên tắc: background-image: linear-gradient(<Góc độ>,<Màu 1> <Chiếm>, <Màu 2>), background; */
     background-size: cover;
     background-position: center;
     height: 100vh; /*view height*/
