--- a/ProjectWebbanhang - Thuchanh/resources/css/color.css
+++ b/ProjectWebbanhang - Thuchanh/resources/css/color.css
@@ -7,4 +7,6 @@
     /* color: rgb(255, 188, 128); */
     color: #FC4F4F;
     /* color:rgb(252, 79, 79); */
+    color: #FE7E6D;
+    /* color: rgb(254, 126, 109); */
 }
