--- a/ProjectEngslish - Learn/resources/css/style.css
+++ b/ProjectEngslish - Learn/resources/css/style.css
@@ -20,7 +20,7 @@ html{
 
 /*-----------------------HEADER-----------------------*/
 .logo{
-    width: 350px;    
+    width: 350px;    /*Đồng thời tạo ra 1 khoảng cách so với dòng h1*/
     float: left;
     margin-left: 70px;
     margin-top: -50px;
@@ -59,7 +59,35 @@ header{
 }
 
 .row{
-    width: 1000px; 
+    max-width: 1000px; 
     /*Đặt set là 1140 mục đích là để tăng cái độ rộng của cái box. Nếu center thì nó sẽ đúng với đề bài hơn.*/
     margin: 0 auto;
+}
+
+.heading-main-row{
+    /*Kĩ thuật dịch khối căn giữa*/
+    width: 1000px; /*Vẫn phải set*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /*Dịch chuyển khối theo chiều dọc và chiều ngang*/
+}
+
+.heading-main-text{
+    text-transform: uppercase; /*In hoa, lowercase là in thường*/
+    font-size: 300%; /*Chỉnh reponsive dễ hơn*/
+    color: white;
+    padding-bottom: 20px;
+}
+
+.heading-main-row a{
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    background-color: orange;
+
+    text-decoration: none;
+    color: white;
 }
