--- a/ProjectWebbanhang - Thuchanh/resources/css/style.css
+++ b/ProjectWebbanhang - Thuchanh/resources/css/style.css
@@ -52,7 +52,7 @@ header{
 }
 
 .boxheader{
-    width: 1140px;
+    width: 1000px;
     margin: 0 auto;
     margin-top: 100px;
 }
@@ -60,11 +60,39 @@ header{
 .boxheader p{
     font-weight: 700;
     font-size: 50px;
+    text-transform: uppercase;
+    word-spacing: 10px; 
+    line-height: 135%; 
+}
+
+.boxheader a{
+    display: inline-block;
+    width: 200px;
+    background-color: #FF6B6B;
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: inline;
+    text-decoration: none;
+    margin-right: 50px;
+    color: black;
+    transition: all 0.1s;
+}
+
+.boxheader a:hover, .boxheader a:active{
+    background-color: #bd2525;
 }
 
 .navLinkHeader li a:hover, .navLinkHeader li a:active{
     border-bottom: 1px solid;
 }
 
+.about-picture img{
+    width: 90%;
+}
 
-
+.row{
+    max-width: 1140px; 
+    /*Đặt set là 1140 mục đích là để tăng cái độ rộng của cái box. Nếu center thì nó sẽ đúng với đề bài hơn.*/
+    margin: 0 auto;
+}
