--- a/ProjectEngslish - Learn/resources/css/style.css
+++ b/ProjectEngslish - Learn/resources/css/style.css
@@ -150,5 +150,35 @@ header{
 /*---------------------------ABOUT US------------------------------*/
 .about-picture img{
     width: 90%;
+    border-radius: 20px;
+    border: 4px solid #a0beda;
+    box-shadow: 0px 5px 15px 5px #265077;
+    /*Gồm 5 tham số: x, y, độ mờ, độ phóng rộng, màu*/
+    /* filter: blur(2px) brightness(55%); */
 }
 
+.about-picture{
+    position: relative;
+}
+
+.picture-title{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #c2e1fd;
+    transform: translate(-65%, 100%);
+    opacity: 0;
+}
+
+/*Áp dụng event vào hình ảnh phần About Us*/
+.about-picture:hover img, 
+.about-picture:active img{
+    filter: blur(2px) brightness(55%);
+}
+
+/*Áp dụng event vào hình ảnh phần Picture Title*/
+.about-picture:hover .picture-title, 
+.about-picture:active .picture-title{
+    transform: translate(-65%, -50%);
+    opacity: 1;
+}
