Commit merch 2 du lieu 25/3/2022

--- a/ProjectWebbanhang - Thuchanh/resources/css/style.css
+++ b/ProjectWebbanhang - Thuchanh/resources/css/style.css
@@ -59,7 +59,7 @@ header{
 
 .boxheader p{
     font-weight: 700;
-    font-size: 50px;
+    font-size: 350%;
     text-transform: uppercase;
     word-spacing: 10px; 
     line-height: 135%; 
