--- a/ProjectEngslish - Learn/resources/css/style.css
+++ b/ProjectEngslish - Learn/resources/css/style.css
@@ -68,7 +68,7 @@ h2{
     margin: 20px;
     color: #e67e22;
     font-size: 180%;
-    font-weight: 700;
+    font-weight: 1000;
 }
 
 /*Tạo dòng kẻ bằng after*/
@@ -159,6 +159,7 @@ header{
 
 .about-picture{
     position: relative;
+    margin-top: 50px;
 }
 
 .picture-title{
@@ -168,6 +169,7 @@ header{
     color: #c2e1fd;
     transform: translate(-65%, 100%);
     opacity: 0;
+    transition: all .7s;
 }
 
 /*Áp dụng event vào hình ảnh phần About Us*/
@@ -181,4 +183,33 @@ header{
 .about-picture:active .picture-title{
     transform: translate(-65%, -50%);
     opacity: 1;
+}
+
+/*---------------------------PRODUCT------------------------------*/
+.products-section{
+    background-color: #f4f4f4;
+}
+
+.products-section h2{
+    margin-bottom: 60px;
+}
+
+.product-box{
+    background-color: #e1e3f1;
+    border-radius: 20px;
+}
+
+.product-box h3{
+    background-color: #1d466f;
+    color: #ffffff;
+    text-align: center;
+    padding: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    text-transform: uppercase;
+    font-size: 130%;
+}
+
+.product-box ul{
+    list-style-type: none;
 }
