--- a/ProjectEngslish - Learn/resources/css/style.css
+++ b/ProjectEngslish - Learn/resources/css/style.css
@@ -275,6 +275,9 @@ blockquote::before{
    /*https://css-tricks.com/snippets/html/glyphs/*/
    display: block;
    font-size: 400%;
+   position: relative;
+   top: 0px;
+   left: -3px;
 }
 
 cite{
