--- a/ProjectWebbanhang - Thuchanh/resources/css/style.css
+++ b/ProjectWebbanhang - Thuchanh/resources/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 html{
@@ -10,6 +11,7 @@ html{
     color: black;
     background-color: white;
     text-rendering: optimizeLegibility;
+    display: inline-block;
 }
 
 /*****************Những thuộc tính dùng lại nhiều lần******************/
@@ -198,14 +200,15 @@ header{
     font-size: 80%;
 }
 
-.product-box ul{
+.product-box > ul{
     list-style: none;
 }
 
 .product-box li{
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    display: inline-block;
+    margin-left: 5%;
+    margin-top: 8px;
+    margin-bottom: 10px;
 }
 
 .product-box .small-icon{
@@ -218,7 +221,7 @@ header{
 
 /************FEATURES SECTIONS************/
 .features-section{
-    background-image: linear-gradient(45deg, rgba(246, 110, 19,0.75), rgba(255, 188, 128,0.75)), url("../img/backgr2.png");
+    background-image: linear-gradient(45deg, rgba(246, 110, 19,0.75), rgba(255, 188, 128,0.75)), url("../img/backgr2.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -233,5 +236,12 @@ header{
 }
 
 .features-section object{
-    width: 20%;
+    width: 50px;
+}
+
+.features-section span{
+    display: inline-block;
+    font-weight: 900;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
