--- a/ProjectEngslish - Learn/resources/css/style.css
+++ b/ProjectEngslish - Learn/resources/css/style.css
@@ -347,12 +347,48 @@ figcaption{
 
 .information{
     list-style-type: none;
+    color: white;
+    line-height: 200%;
+    margin-top: 70px;
+    word-spacing: 1px;
+    font-size: 95%;
+}
 
+.information .small-icon{
+    color: #427db4;
+}
+
+.information .small-icon::hover,
+.information .small-icon::active{
+    transform: 1.3;
 }
 
 .social-icon{
+    margin-top: 50px;
     list-style: none;
     display: inline-block;
+}
+
+.social-icon li{
+    display: inline-block; /*Hiển thị trên cùng 1 hàng*/
+    font-size: 250%;
+    margin-left: 20px;
+    color: white;
+}
+
+.social-icon li i{    
+    transition: all .3s;
+}
+
+.social-icon li i:hover,
+.social-icon li i:active{
+    transform: scale(1.3);
+    color: #e67e22;
+}
+
+/*******FORM************/
+form{
+    background-color: rgb(0, 0, 0, .4);
 }
 
 /*---------------------------FOOTER-SECTIONS-----------------------------*/
