Commit ngày 13/6/2022 lần 1

--- a/ProjectEngslish - Learn/resources/css/style.css
+++ b/ProjectEngslish - Learn/resources/css/style.css
@@ -12,6 +12,11 @@ html{
     text-rendering: optimizeLegibility; /*Cách hiển thị chữ: Làm sao hiển thị tốt nhất*/
 }
 
+body 
+{
+    overflow-x: hidden;
+}
+
 
 
 /*-------------------------REUSAUBLE COMPONENT------------------*/
