--- a/ProjectEngslish - Learn/resources/css/query.css
+++ b/ProjectEngslish - Learn/resources/css/query.css
@@ -1,1 +1,54 @@
+/*@media only screen and (max-width: 1000px) 
+/*Nhỏ hơn 1000px áp dụng*/
+/* {
+    h1{
+        color: red;
+    }
+} */
+
+/* @media only screen and (min-width: 1000px)  */
+/*Lớn hơn 1000px áp dụng*/
+/* {
+    h1{
+        color: blue;
+    }
+} */
+
+
+/* Big tablet to 1200px; */
+@media only screen  and (max-width:1200px){
+    html{
+        font-size: 16px; /*Đổi font size là ưu tiên số 1*/
+    }
+}
+ 
+/* Small tablet to big tablet from 768x to 1023px */
+@media only screen and (max-width:1023px){
+    .logo{
+        width: 300px;
+        margin-left: 10px;
+    }
+    .main-nav{
+        margin-right: 15px;
+    }
+    .main-nav li{
+        margin-right: 10px;
+    }
+    .heading-main-row{
+        transform: translate(-30%, -30%);
+    }
+    
+}
+
+ 
+/* Small phones to small tablets */
+@media only screen and (max-width: 767px){
+  
+}
+ 
+/* Small phones from 0 to 480px; */
+@media only screen and (max-width: 480px){
+   
+ 
+}
 
