--- a/ProjectEngslish - Learn/resources/css/style.css
+++ b/ProjectEngslish - Learn/resources/css/style.css
@@ -6,6 +6,7 @@
 
 html{
     font-family: 'Lato',sans-serif;
+    scroll-behavior: smooth;
     font-size: 20px; /*Mặc định là 16px*/
     color: #5a5a5a;
     background-color: #ffffff;
@@ -17,7 +18,24 @@ body
     overflow-x: hidden;
 }
 
+/*************STICKY*****************/
+.sticky{
+    background-color: rgba(2,33,64, 0.9);
+    position: fixed;
+    top: 0; left: 0;
+    z-index: 900;
+    width: 100%;
+    height: 50px;
+}
 
+.sticky .logo{
+    width: 250px;
+    margin-top: -40px;
+}
+
+.sticky .linkheader{
+    margin-top: -30px;
+}
 
 /*-------------------------REUSAUBLE COMPONENT------------------*/
 /*------------Thứ xài đi xài lại nhiều lần----------------------*/
